tests/invalid/ho_default_func_2.sub.err_exp
ho_default_func_2.sub.m:014: In clause for `baz(out)':
ho_default_func_2.sub.m:014:   in argument 1 of call to function `ho_default_func_2:id:mkid/1':
ho_default_func_2.sub.m:014:   mode error: variable `V_2' has instantiatedness `/* unique */(func((free -> ground)) = (ground -> ground) is det)',
ho_default_func_2.sub.m:014:   expected instantiatedness was `ground'.
For more information, try recompiling with `-E'.
